// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`valibot > basic 1`] = `
{
  "components": {},
  "info": {
    "description": "Development documentation",
    "title": "Hono Documentation",
    "version": "0.0.0",
  },
  "openapi": "3.1.0",
  "paths": {
    "/": {
      "get": {
        "description": "This is a test route",
        "operationId": "getIndex",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "properties": {
                  "message": {
                    "type": "string",
                  },
                },
                "required": [
                  "message",
                ],
                "type": "object",
              },
            },
          },
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "message": {
                      "type": "string",
                    },
                  },
                  "required": [
                    "message",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "Success",
          },
        },
        "summary": "Test route",
        "tags": [
          "test",
        ],
      },
    },
  },
  "tags": undefined,
}
`;

exports[`valibot > with metadata 1`] = `
{
  "components": {
    "schemas": {
      "SuccessResponse": {
        "properties": {
          "message": {
            "type": "string",
          },
        },
        "required": [
          "message",
        ],
        "type": "object",
      },
    },
  },
  "info": {
    "description": "Development documentation",
    "title": "Hono Documentation",
    "version": "0.0.0",
  },
  "openapi": "3.1.0",
  "paths": {
    "/": {
      "get": {
        "description": "This is a test route",
        "operationId": "getIndex",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "properties": {
                  "message": {
                    "type": "string",
                  },
                },
                "required": [
                  "message",
                ],
                "type": "object",
              },
            },
          },
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/SuccessResponse",
                },
              },
            },
            "description": "Success",
          },
        },
        "summary": "Test route",
        "tags": [
          "test",
        ],
      },
    },
  },
  "tags": undefined,
}
`;

exports[`valibot > with transformation 1`] = `
{
  "components": {},
  "info": {
    "description": "Development documentation",
    "title": "Hono Documentation",
    "version": "0.0.0",
  },
  "openapi": "3.1.0",
  "paths": {
    "/": {
      "get": {
        "description": "This is a test route",
        "operationId": "getIndex",
        "parameters": [
          {
            "in": "query",
            "name": "names",
            "required": true,
            "schema": {
              "items": {
                "type": "string",
              },
              "type": "array",
            },
          },
        ],
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "type": "string",
                },
              },
            },
            "description": "Success",
          },
        },
        "summary": "Test route",
        "tags": [
          "test",
        ],
      },
    },
  },
  "tags": undefined,
}
`;

exports[`valibot > with unsupported schema 1`] = `
{
  "components": {},
  "info": {
    "description": "Development documentation",
    "title": "Hono Documentation",
    "version": "0.0.0",
  },
  "openapi": "3.1.0",
  "paths": {
    "/": {
      "get": {
        "operationId": "getIndex",
        "parameters": [
          {
            "in": "query",
            "name": "unrepresentable",
            "required": true,
            "schema": {
              "additionalProperties": {
                "items": {
                  "anyOf": [
                    {
                      "properties": {
                        "length": {
                          "type": "number",
                        },
                        "type": {
                          "const": "table",
                        },
                      },
                      "required": [
                        "type",
                        "length",
                      ],
                      "type": "object",
                    },
                    {
                      "properties": {
                        "speed": {
                          "type": "number",
                        },
                        "type": {
                          "const": "boat",
                        },
                      },
                      "required": [
                        "type",
                        "speed",
                      ],
                      "type": "object",
                    },
                  ],
                },
                "type": "array",
              },
              "type": "object",
            },
          },
        ],
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "type": "string",
                },
              },
            },
            "description": "Success",
          },
        },
      },
    },
  },
  "tags": undefined,
}
`;
